--- a/index.html
+++ b/index.html
@@ -62,15 +62,35 @@
 
         <!-- Modal for Selecting Teacher -->
         <div id="teacherModal" class="modal">
-            <div class="modal-content">
-                <h3>Select a Teacher</h3>
-                <button onclick="selectTeacher('All')">All Teachers</button>
-                <button onclick="selectTeacher('John Doe')">John Doe</button>
-                <button onclick="selectTeacher('Jane Smith')">Jane Smith</button>
-                <button onclick="selectTeacher('Emily Brown')">Emily Brown</button>
-                <button onclick="selectTeacher('Michael Johnson')">Michael Johnson</button>
-                <button onclick="closeTeacherModal()">Close</button>
-            </div>
+            ```html
+<div class="modal-content">
+    <h3>Select a Teacher</h3>
+    <button onclick="selectTeacher('All')">All Teachers</button>
+    <button onclick="selectTeacher('Dr. Kazi Khairul Islam (KKI)')">Dr. Kazi Khairul Islam (KKI)</button>
+    <button onclick="selectTeacher('Dr. Mallika Mitra (MM)')">Dr. Mallika Mitra (MM)</button>
+    <button onclick="selectTeacher('Rezwana Sultana (RS)')">Rezwana Sultana (RS)</button>
+    <button onclick="selectTeacher('Md. Arifuzzaman Sajib (MAS)')">Md. Arifuzzaman Sajib (MAS)</button>
+    <button onclick="selectTeacher('Mst. Tasnin Tania (TAT)')">Mst. Tasnin Tania (TAT)</button>
+    <button onclick="selectTeacher('Jannatul Afroj Akhi (JAA)')">Jannatul Afroj Akhi (JAA)</button>
+    <button onclick="selectTeacher('Shamima Yasmin Sejuti (SYS)')">Shamima Yasmin Sejuti (SYS)</button>
+    <button onclick="selectTeacher('Shamsuzzjaman Ridoy (SR)')">Shamsuzzjaman Ridoy (SR)</button>
+    <button onclick="selectTeacher('Nasrullah Masud (NM)')">Nasrullah Masud (NM)</button>
+    <button onclick="selectTeacher('Md. Mahadi Hasan Sajib (MHS)')">Md. Mahadi Hasan Sajib (MHS)</button>
+    <button onclick="selectTeacher('Md. Asif Iqbal (MAI)')">Md. Asif Iqbal (MAI)</button>
+    <button onclick="selectTeacher('Partho Kumar Nonda (PKN)')">Partho Kumar Nonda (PKN)</button>
+    <button onclick="selectTeacher('Dr. Sultana Rajia (DSR)')">Dr. Sultana Rajia (DSR)</button>
+    <button onclick="selectTeacher('Syed Naimur Rahman Sohel (SNR)')">Syed Naimur Rahman Sohel (SNR)</button>
+    <button onclick="selectTeacher('Nahin Rahman (NR)')">Nahin Rahman (NR)</button>
+    <button onclick="selectTeacher('Dr. Mohammad Abdul Motin (AM)')">Dr. Mohammad Abdul Motin (AM)</button>
+    <button onclick="selectTeacher('Dr. Mohammad Rabiul Islam Sarker (MRI)')">Dr. Mohammad Rabiul Islam Sarker (MRI)</button>
+    <button onclick="selectTeacher('Nazmul Sharif (NS)')">Nazmul Sharif (NS)</button>
+    <button onclick="selectTeacher('Tamanna Tasnim Prova (TT)')">Tamanna Tasnim Prova (TT)</button>
+    <button onclick="selectTeacher('Shaima Sultana (SS)')">Shaima Sultana (SS)</button>
+    <button onclick="selectTeacher('Dr. Md. Zahurul Islam Sarkar (MZI)')">Dr. Md. Zahurul Islam Sarkar (MZI)</button>
+    <button onclick="selectTeacher('Dr. Md. Masud Rana (MR)')">Dr. Md. Masud Rana (MR)</button>
+    <button onclick="selectTeacher('Dr. Ali Hossain (DAH)')">Dr. Ali Hossain (DAH)</button>
+    <button onclick="closeTeacherModal()">Close</button>
+</div>
         </div>
 
         <div class="main-content" id="schedule"></div>
