--- a/index.html
+++ b/index.html
@@ -22,7 +22,8 @@
         </div>
 
         <!-- Day Selection Dropdown -->
-        <div id="dayMenu">
+        <div id="dayMenu" class="modal">
+            <div class="modal-content">
             <button onclick="selectDay('Sunday')">Sunday</button>
             <button onclick="selectDay('Monday')">Monday</button>
             <button onclick="selectDay('Tuesday')">Tuesday</button>
@@ -31,6 +32,7 @@
             <button onclick="selectDay('Friday')">Friday</button>
             <button onclick="selectDay('Saturday')">Saturday</button>
             <button onclick="closeDayMenu()">Close</button>
+            </div>
         </div>
 
         <!-- Modal for Selecting Semester -->
