--- a/index.html
+++ b/index.html
@@ -22,7 +22,7 @@
         </div>
 
         <!-- Day Selection Dropdown -->
-        <div id="dayMenu" class="modal">
+        <div id="dayMenu" >
             <div class="modal-content">
             <button onclick="selectDay('Sunday')">Sunday</button>
             <button onclick="selectDay('Monday')">Monday</button>
@@ -32,11 +32,11 @@
             <button onclick="selectDay('Friday')">Friday</button>
             <button onclick="selectDay('Saturday')">Saturday</button>
             <button onclick="closeDayMenu()">Close</button>
-            </div>
+            
         </div>
 
         <!-- Modal for Selecting Semester -->
-        <div id="semesterModal" class="modal">
+        <div id="semesterModal">
             <div class="modal-content">
                 <h3>Select a Semester</h3>
                 <button onclick="selectSemester('All')">All Semesters</button>
