--- a/index.html
+++ b/index.html
@@ -22,18 +22,24 @@
         </div>
 
         <!-- Day Selection Dropdown -->
-        <div id="dayMenu" >
-            <div class="modal-content">
-            <button onclick="selectDay('Sunday')">Sunday</button>
-            <button onclick="selectDay('Monday')">Monday</button>
-            <button onclick="selectDay('Tuesday')">Tuesday</button>
-            <button onclick="selectDay('Wednesday')">Wednesday</button>
-            <button onclick="selectDay('Thursday')">Thursday</button>
-            <button onclick="selectDay('Friday')">Friday</button>
-            <button onclick="selectDay('Saturday')">Saturday</button>
-            <button onclick="closeDayMenu()">Close</button>
-            
-        </div>
+        <!-- Button for Day Selector -->
+<button id="dayButton">Select Day: Today</button>
+
+<!-- Modal for Selecting Day -->
+<div id="dayModal" class="modal">
+    <div class="modal-content">
+        <h3>Select a Day</h3>
+        <button onclick="selectDay('Sunday')">Sunday</button>
+        <button onclick="selectDay('Monday')">Monday</button>
+        <button onclick="selectDay('Tuesday')">Tuesday</button>
+        <button onclick="selectDay('Wednesday')">Wednesday</button>
+        <button onclick="selectDay('Thursday')">Thursday</button>
+        <button onclick="selectDay('Friday')">Friday</button>
+        <button onclick="selectDay('Saturday')">Saturday</button>
+        <button onclick="closeDayModal()">Close</button>
+    </div>
+</div>
+
 
         <!-- Modal for Selecting Semester -->
         <div id="semesterModal">
