--- a/index.html
+++ b/index.html
@@ -16,17 +16,17 @@
             <p id="date-time"></p>
             <p id="last-synced"></p>
             <button id="semesterButton">Select Semester</button>
-            <button id="dayModal" class="modal">Select Day: Today</button>
+            <button id="dayButton" class="modal">Select Day: Today</button>
             <button id="roomButton">Select Room: All Rooms</button>
             <button id="teacherButton">Select Teacher: All Teachers</button>
         </div>
 
         <!-- Day Selection Dropdown -->
         <!-- Button for Day Selector -->
-<button id="dayButton">Select Day: Today</button>
+<!-- <button id="dayButton">Select Day: Today</button> -->
 
 <!-- Modal for Selecting Day -->
-<!-- <div id="dayModal" class="modal"> -->
+<div id="dayModal" class="modal">
     <div class="modal-content">
         <h3>Select a Day</h3>
         <button onclick="selectDay('Sunday')">Sunday</button>
