--- a/index.html
+++ b/index.html
@@ -22,7 +22,7 @@
         </div>
 
         <!-- Day Selection Dropdown -->
-        <div id="dayMenu">
+        <div id="dayMenu" class="modal">
             <button onclick="selectDay('Sunday')">Sunday</button>
             <button onclick="selectDay('Monday')">Monday</button>
             <button onclick="selectDay('Tuesday')">Tuesday</button>
