--- a/index.html
+++ b/index.html
@@ -22,7 +22,7 @@
         </div>
 
         <!-- Day Selection Dropdown -->
-        <div id="dayMenu" class="modal">
+        <div id="dayMenu" class="modal" style="display: flex;">
             <div class="modal-content">
             <button onclick="selectDay('Sunday')">Sunday</button>
             <button onclick="selectDay('Monday')">Monday</button>
