--- a/index.html
+++ b/index.html
@@ -54,6 +54,13 @@
                 <h3>Select a Room</h3>
                 <button onclick="selectRoom('All')">All Rooms</button>
                 <button onclick="selectRoom('106')">Room 106</button>
+                <button onclick="selectRoom('108')"> Lab Room 108</button>
+                <button onclick="selectRoom('109')"> Lab Room 109</button>
+                <button onclick="selectRoom('110')"> Lab Room 110</button>
+                <button onclick="selectRoom('111')"> Lab Room 111</button>
+                <button onclick="selectRoom('112')"> Lab Room 112</button>
+                <button onclick="selectRoom('113')"> Lab Room 113</button>
+                <button onclick="selectRoom('114')"> Lab Room 114</button>
                 <button onclick="selectRoom('310')">Room 310</button>
                 <button onclick="selectRoom('312')">Room 312</button>
                 <button onclick="selectRoom('410')">Room 410</button>
