--- a/index.html
+++ b/index.html
@@ -106,7 +106,7 @@
 
         <!-- Footer -->
         <div class="footer">
-            <p>Maintaining by CR</p>
+            <p>Maintaining by <a href="">Contributors</a></p>
         </div>
     </div>
 
