--- a/index.html
+++ b/index.html
@@ -106,7 +106,8 @@
 
         <!-- Footer -->
         <div class="footer">
-            <p>Maintaining by <a href="">Contributors</a></p>
+            <p>Maintaining by <a href="" style="color: white;">Contributors</a></p>
+
         </div>
     </div>
 
