--- a/index.html
+++ b/index.html
@@ -19,6 +19,20 @@
             <button id="dayButton">Select Day: Today</button>
             <button id="roomButton">Select Room: All Rooms</button>
             <button id="teacherButton">Select Teacher: All Teachers</button>
+
+            <a href="/.../library" target="_blank">
+              <button">Online Library</button>
+            </a>
+            
+            <a href="/.../students-33" target="_blank">
+              <button>Select Students</button>
+            </a>
+            
+            <a href="/.../teachers" target="_blank">
+              <button>Select Teacher: All Teachers</button>
+            </a>
+
+
         </div>
 
         <!-- Day Selection Dropdown -->
