--- a/index.html
+++ b/index.html
@@ -20,15 +20,15 @@
             <button id="roomButton">Select Room: All Rooms</button>
             <button id="teacherButton">Select Teacher: All Teachers</button>
 
-            <a href="/.../library" target="_blank">
+            <a href="/library" target="_blank">
               <button">Online Library</button>
             </a>
             
-            <a href="/.../students-33" target="_blank">
+            <a href="/students-33" target="_blank">
               <button>Select Students</button>
             </a>
             
-            <a href="/.../teachers" target="_blank">
+            <a href="/teachers" target="_blank">
               <button>Select Teacher: All Teachers</button>
             </a>
 
