--- a/index.html
+++ b/index.html
@@ -19,18 +19,10 @@
             <button id="dayButton">Select Day: Today</button>
             <button id="roomButton">Select Room: All Rooms</button>
             <button id="teacherButton">Select Teacher: All Teachers</button>
-
-            <a href="/library" target="_blank">
-              <button">Online Library</button>
-            </a>
             
-            <a href="/students-33" target="_blank">
-              <button>Select Students</button>
-            </a>
-            
-            <a href="/teachers" target="_blank">
-              <button>Select Teacher: All Teachers</button>
-            </a>
+            <a href="/library" class="button-link" target="_blank">Online Library</a>
+            <a href="/students-33" class="button-link" target="_blank">All 33rd's Students</a>
+            <a href="/teachers" class="button-link" target="_blank">All EEE Teachers</a>
 
 
         </div>
