--- a/index.html
+++ b/index.html
@@ -19,13 +19,9 @@
             <button id="dayButton">Select Day: Today</button>
             <button id="roomButton">Select Room: All Rooms</button>
             <button id="teacherButton">Select Teacher: All Teachers</button>
-            <button id=""><a href="/library" class="button-link" target="_blank">Online Library</a></button>
-            <button id=""><a href="/students-33" class="button-link" target="_blank">All 33rd's Students</a></button>
-            <button id=""><a href="/teachers" class="button-link" target="_blank">All EEE Teachers</a></button>
-            
-<!--             <a href="/library" class="button-link" target="_blank">Online Library</a>
-            <a href="/students-33" class="button-link" target="_blank">All 33rd's Students</a>
-            <a href="/teachers" class="button-link" target="_blank">All EEE Teachers</a> -->
+            <button id=""><a href="/library" target="_blank">Online Library</a></button>
+            <button id=""><a href="/students-33" target="_blank">All 33rd's Students</a></button>
+            <button id=""><a href="/teachers" target="_blank">All EEE Teachers</a></button>
 
 
         </div>
