--- a/index.html
+++ b/index.html
@@ -19,9 +19,9 @@
             <button id="dayButton">Select Day: Today</button>
             <button id="roomButton">Select Room: All Rooms</button>
             <button id="teacherButton">Select Teacher: All Teachers</button>
-            <button id=""><a href="/library" target="_blank">Online Library</a></button>
-            <button id=""><a href="/students-33" target="_blank">All 33rd's Students</a></button>
-            <button id=""><a href="/teachers" target="_blank">All EEE Teachers</a></button>
+            <button id=""><a href="/library" style="color: black;" target="_blank">Online Library</a></button>
+            <button id=""><a href="/students-33" style="color: black;" target="_blank">All 33rd's Students</a></button>
+            <button id=""><a href="/teachers" style="color: black;" target="_blank">All EEE Teachers</a></button>
 
 
         </div>
@@ -111,7 +111,7 @@
 
         <!-- Footer -->
         <div class="footer">
-            <p>Maintaining by <a href="" style="color: white;">Contributors</a></p>
+            <p>Maintaining by <a href="/contributors" style="color: white;">Contributors</a></p>
 
         </div>
     </div>
