--- a/index.html
+++ b/index.html
@@ -46,9 +46,17 @@
                 <h3>Select a Semester</h3>
                 <button onclick="selectSemester('All')">All Semesters</button>
                 <button onclick="selectSemester('1st')">1st Semester</button>
-                <button onclick="selectSemester('2nd')">2nd Semester</button>
+                <button onclick="selectSemester('2nda')">2nd(A) Semester</button>
+                <button onclick="selectSemester('2ndb')">2nd(B) Semester</button>
                 <button onclick="selectSemester('3rd')">3rd Semester</button>
-                <button onclick="selectSemester('4th')">4th Semester</button>
+                <button onclick="selectSemester('4tha')">4th(A) Semester</button>
+                <button onclick="selectSemester('4thb')">4th(B) Semester</button>
+                <button onclick="selectSemester('5th')">5th Semester</button>
+                <button onclick="selectSemester('6th')">6th Semester</button>
+                <button onclick="selectSemester('7th')">7th Semester</button>
+                <button onclick="selectSemester('8th')">8th Semester</button>
+                <button onclick="selectSemester('9th')">9th Semester</button>
+                <button onclick="selectSemester('10th')">10th Semester</button>
                 <button onclick="closeModal()">Close</button>
             </div>
         </div>
