--- a/index.html
+++ b/index.html
@@ -12,7 +12,7 @@
     <div class="container">
         <div class="header">
             <h1>Dept. of EEE</h1>
-            <h2>4th(A) Semester Schedule</h2>
+            <h2>All Semester Schedule</h2>
             <p id="date-time"></p>
             <p id="last-synced"></p>
             <button id="semesterButton">Select Semester</button>
@@ -20,7 +20,7 @@
             <button id="roomButton">Select Room: All Rooms</button>
             <button id="teacherButton">Select Teacher: All Teachers</button>
             <button id=""><a href="/library" style="color: black;" target="_blank">Online Library</a></button>
-            <button id=""><a href="/students-33" style="color: black;" target="_blank">All 33rd's Students</a></button>
+            <button id=""><a href="/students-33" style="color: black;" target="_blank">All Students Profile</a></button>
             <button id=""><a href="/teachers" style="color: black;" target="_blank">All EEE Teachers</a></button>
 
 
@@ -46,11 +46,11 @@
                 <h3>Select a Semester</h3>
                 <button onclick="selectSemester('All')">All Semesters</button>
                 <button onclick="selectSemester('1st')">1st Semester</button>
-                <button onclick="selectSemester('2nda')">2nd(A) Semester</button>
-                <button onclick="selectSemester('2ndb')">2nd(B) Semester</button>
+                <button onclick="selectSemester('2nd A')">2nd(A) Semester</button>
+                <button onclick="selectSemester('2nd B')">2nd(B) Semester</button>
                 <button onclick="selectSemester('3rd')">3rd Semester</button>
-                <button onclick="selectSemester('4tha')">4th(A) Semester</button>
-                <button onclick="selectSemester('4thb')">4th(B) Semester</button>
+                <button onclick="selectSemester('4th A')">4th(A) Semester</button>
+                <button onclick="selectSemester('4th B')">4th(B) Semester</button>
                 <button onclick="selectSemester('5th')">5th Semester</button>
                 <button onclick="selectSemester('6th')">6th Semester</button>
                 <button onclick="selectSemester('7th')">7th Semester</button>
