--- a/index.html
+++ b/index.html
@@ -120,7 +120,15 @@
         <!-- Footer -->
         <div class="footer">
             <p>Maintaining by <a href="/contributors" style="color: white;">Contributors</a></p>
-
+                <div style="display: none;">
+    <a href='https://www.free-website-hit-counter.com'>
+        <img src='https://www.free-website-hit-counter.com/zc.php?d=6&id=4447&s=18' border='0' alt='Free Website Hit Counter'>
+    </a>
+    <br />
+    <small>
+        <a href='https://www.free-website-hit-counter.com' title="Free Website Hit Counter">Free website hit counter</a>
+    </small>
+</div>
         </div>
     </div>
 
